--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "devDependencies": {
     "@playwright/mcp": "^0.0.52",
     "@playwright/test": "^1.57.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.10.2",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.3",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
+    "js-yaml": "^4.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "winston": "^3.18.3"
